Feat: Allow for opening audio files

--- a/feature/player/src/main/AndroidManifest.xml
+++ b/feature/player/src/main/AndroidManifest.xml
@@ -733,6 +733,24 @@
                 <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.WEBM" />
                 <data android:pathPattern="/.*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\..*\\.WEBM" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:mimeType="audio/*" />
+                <data android:scheme="file" />
+                <data android:scheme="content" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:pathPattern="/.*\\.mp3" />
+                <data android:pathPattern="/.*\\.wav" />
+                <data android:pathPattern="/.*\\.flac" />
+                <data android:pathPattern="/.*\\.aac" />
+                <data android:pathPattern="/.*\\.ogg" />
+                <data android:pathPattern="/.*\\.m4a" />
+            </intent-filter>
+
         </activity>
 
         <service
